--- a/Assignments/CSS - Final Project.ipynb
+++ b/Assignments/CSS - Final Project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 1,
    "id": "55a20c70",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "id": "b6b7d7c6",
    "metadata": {},
    "outputs": [
@@ -35,19 +35,162 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Looking in: ../congresstweets/data\n"
+      "Looking in: ../congresstweets/data\n",
+      "Contents: ['2019-11-21.json', '2022-04-11.json', '2020-11-18.json', '2019-01-21.json', '2020-01-18.json']\n",
+      "Found 2197 JSON files\n"
      ]
     },
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../congresstweets/data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[143], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m data_dir \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../congresstweets/data\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mLooking in:\u001b[39m\u001b[38;5;124m\"\u001b[39m, data_dir)\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mContents:\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_dir\u001b[49m\u001b[43m)\u001b[49m[:\u001b[38;5;241m5\u001b[39m])\n\u001b[1;32m      6\u001b[0m json_paths \u001b[38;5;241m=\u001b[39m glob\u001b[38;5;241m.\u001b[39mglob(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m*.json\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFound \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(json_paths)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m JSON files\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../congresstweets/data'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2197/2197 [00:22<00:00, 98.98it/s] \n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded 5068352 tweets\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>screen_name</th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>time</th>\n",
+       "      <th>link</th>\n",
+       "      <th>text</th>\n",
+       "      <th>source</th>\n",
+       "      <th>yesterday</th>\n",
+       "      <th>today</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1197531273473994755</td>\n",
+       "      <td>RepValDemings</td>\n",
+       "      <td>798973032362606600</td>\n",
+       "      <td>2019-11-21T10:04:39-05:00</td>\n",
+       "      <td>https://www.twitter.com/RepValDemings/statuses...</td>\n",
+       "      <td>President Trump demanded that Ukraine interfer...</td>\n",
+       "      <td>Twitter Web App</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1197574591130013700</td>\n",
+       "      <td>SenatorLeahy</td>\n",
+       "      <td>242836537</td>\n",
+       "      <td>2019-11-21T12:56:47-05:00</td>\n",
+       "      <td>https://www.twitter.com/SenatorLeahy/statuses/...</td>\n",
+       "      <td>Yes. He was the soul and patron saint of snowb...</td>\n",
+       "      <td>TweetDeck</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1197605237969866752</td>\n",
+       "      <td>RepJayapal</td>\n",
+       "      <td>815733290955112448</td>\n",
+       "      <td>2019-11-21T14:58:33-05:00</td>\n",
+       "      <td>https://www.twitter.com/RepJayapal/statuses/11...</td>\n",
+       "      <td>This violence is predictable and preventable, ...</td>\n",
+       "      <td>Twitter Web App</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1197611392427286540</td>\n",
+       "      <td>JackieSpeier</td>\n",
+       "      <td>521731529</td>\n",
+       "      <td>2019-11-21T15:23:01-05:00</td>\n",
+       "      <td>https://www.twitter.com/JackieSpeier/statuses/...</td>\n",
+       "      <td>Last week, my legislation removing the deadlin...</td>\n",
+       "      <td>Sprout Social</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1197706911375863808</td>\n",
+       "      <td>SenCoryGardner</td>\n",
+       "      <td>235217558</td>\n",
+       "      <td>2019-11-21T21:42:34-05:00</td>\n",
+       "      <td>https://www.twitter.com/SenCoryGardner/statuse...</td>\n",
+       "      <td>Now they want to do the same with corporations...</td>\n",
+       "      <td>Twitter Web App</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    id     screen_name             user_id  \\\n",
+       "0  1197531273473994755   RepValDemings  798973032362606600   \n",
+       "1  1197574591130013700    SenatorLeahy           242836537   \n",
+       "2  1197605237969866752      RepJayapal  815733290955112448   \n",
+       "3  1197611392427286540    JackieSpeier           521731529   \n",
+       "4  1197706911375863808  SenCoryGardner           235217558   \n",
+       "\n",
+       "                        time  \\\n",
+       "0  2019-11-21T10:04:39-05:00   \n",
+       "1  2019-11-21T12:56:47-05:00   \n",
+       "2  2019-11-21T14:58:33-05:00   \n",
+       "3  2019-11-21T15:23:01-05:00   \n",
+       "4  2019-11-21T21:42:34-05:00   \n",
+       "\n",
+       "                                                link  \\\n",
+       "0  https://www.twitter.com/RepValDemings/statuses...   \n",
+       "1  https://www.twitter.com/SenatorLeahy/statuses/...   \n",
+       "2  https://www.twitter.com/RepJayapal/statuses/11...   \n",
+       "3  https://www.twitter.com/JackieSpeier/statuses/...   \n",
+       "4  https://www.twitter.com/SenCoryGardner/statuse...   \n",
+       "\n",
+       "                                                text           source  \\\n",
+       "0  President Trump demanded that Ukraine interfer...  Twitter Web App   \n",
+       "1  Yes. He was the soul and patron saint of snowb...        TweetDeck   \n",
+       "2  This violence is predictable and preventable, ...  Twitter Web App   \n",
+       "3  Last week, my legislation removing the deadlin...    Sprout Social   \n",
+       "4  Now they want to do the same with corporations...  Twitter Web App   \n",
+       "\n",
+       "  yesterday today  \n",
+       "0       NaN   NaN  \n",
+       "1       NaN   NaN  \n",
+       "2       NaN   NaN  \n",
+       "3       NaN   NaN  \n",
+       "4       NaN   NaN  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -72,23 +215,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b616d94c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_contexts(word, texts, width=40):\n",
-    "        wc = int(width/4)                # words of context\n",
-    "        for i in :\n",
-    "            lcontext = ' '.join(self._text[i-wc:i])\n",
-    "            rcontext = ' '.join(self._text[i:i+wc])\n",
-    "            ldisplay = '{:>{width}}'.format(lcontext[-width:], width=width)\n",
-    "            rdisplay = '{:{width}}'.format(rcontext[:width], width=width)\n",
-    "            print(ldisplay, rdisplay)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
    "id": "50789f42",
    "metadata": {},
    "outputs": [
@@ -98,7 +224,7 @@
      "text": [
       "[nltk_data] Downloading package punkt_tab to\n",
       "[nltk_data]     /Users/Magnus/nltk_data...\n",
-      "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
       "[nltk_data] Downloading package vader_lexicon to\n",
       "[nltk_data]     /Users/Magnus/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
@@ -113,11 +239,9 @@
     "from nltk.tokenize import word_tokenize\n",
     "def mention_context_sentiment(text, handle, window_size=10):\n",
     "    \"\"\"\n",
-    "    Given the full tweet text and one handle (without @),\n",
-    "    find all occurrences of '@handle' in the token list,\n",
-    "    build a ±window_size word context around each,\n",
-    "    compute each context's VADER compound score,\n",
-    "    and return the average (or 0.0 if no mention found).\n",
+    "    Given a tweet and a handle, find the sorrounding words up to +- a window size, \n",
+    "    and compute the average sentiment over all words in window.\n",
+    "    Output: avg_sentiment\n",
     "    \"\"\"\n",
     "    tokens = word_tokenize(text)\n",
     "    mention_token = '@' + handle.lower()\n",
@@ -166,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "2c8a3a6e",
    "metadata": {},
    "outputs": [
@@ -219,8 +343,11 @@
     "            G[src][tgt][\"avg_sentiment\"] += mention_sentiment\n",
     "        else:\n",
     "            G.add_edge(src, tgt, n_mentions=1, avg_sentiment = mention_sentiment)\n",
-    "for src, tgt in tqdm(G.edges(), desc='Averaging sentiments'): # Average sentiment values\n",
+    "\n",
+    "# Average sentiment values\n",
+    "for src, tgt in tqdm(G.edges(), desc='Averaging sentiments'): \n",
     "    G[src][tgt]['avg_sentiment'] = G[src][tgt]['avg_sentiment']/G[src][tgt]['n_mentions']\n",
+    "    \n",
     "num_nodes = G.number_of_nodes()\n",
     "num_edges = G.number_of_edges()\n",
     "in_degs  = np.array([d for _, d in G.in_degree()])\n",
@@ -274,8 +401,6 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "#from ace_tools import display_dataframe_to_user\n",
-    "\n",
     "# Extract (source, target, avg_sentiment) for all edges\n",
     "edge_data = [(u, v, data.get('avg_sentiment', 0.0)) for u, v, data in G.edges(data=True)]\n",
     "sent_df = pd.DataFrame(edge_data, columns=['source', 'target', 'avg_sentiment'])\n",
