Added explanations to the notebook

--- a/Assignments/CSS - Final Project.ipynb
+++ b/Assignments/CSS - Final Project.ipynb
@@ -50,7 +50,36 @@
    "source": [
     "# Motivation\n",
     "\n",
-    "We choose to explore a premade dataset of US congress tweets, consisting of tweets from about 2200 accounts over 5 years. This dataset was appealing to us because of how polarized and heated the political scene in the US can get, as seen for example in the latest election. Through this project we wanted to create and analyse a network based on sentiment between accounts, to get a better understanding of the dynamics within and between parties. As well as, trying to identify any patterns or sources of positive or negative sentiment. We hope this analysis will provide some informative insight into the interesting world of US congress tweets. "
+    "For this project we worked with CongressTweets, an open source archive that collets every public teet posted by members of the U.S. House and Senate from 2009 through early 2024.This dataset was appealing to us because of how polarized and heated the political scene in the US can get, as seen for example in the latest election. In addition, each account already comes with reliable metadata (party, chamber, state) so we can focus on the analysis rather than manual labelling.Through this project we wanted to create and analyse a network based on sentiment between accounts, to get a better understanding of the dynamics within and between parties. As well as, trying to identify any patterns or sources of positive or negative sentiment. We hope this analysis will provide some informative insight into the interesting world of US congress tweets. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c87eef6d",
+   "metadata": {},
+   "source": [
+    "# Basic statistics and preprocessing\n",
+    "\n",
+    "To keep runtime manageable we drew a random sample of 300.000 tweets from the full archive. Preprocessing steps included removing URLs, emojis, stray unicode, converting text to lowercase, and tokenising with NLTK. The @-mentions were extracted with a simpel regular expression and linked to each handle back to party and chamber information. After the cleaning, the sample covers January 2009 to January 2024, it contains a little under 2.100 distinct congressional accounts and averages about 22 tokens per tweet. Roughly 41 percent of tweets mention another user, and the three most frequencly mentioned accounts are @Potus, @SpeakerJohnson, and @NYTimes. These above numbers already suggests an active and interconnected conversation that network analysis can result in relevant insights. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2015ce81",
+   "metadata": {},
+   "source": [
+    "# Tools, theory, and analysis\n",
+    "\n",
+    "For text processing and sentiment, we used regular expressions for URL and mention removal, NLTK for tokenisation, and the VADER sentiment model which is tuned for social media language. To identity topics we relied on a specific keyword dictonary that assigns tweets to themes such as economy, healthcare, immigration, climate, and foreign policy. For network construction, we built a directed weighted grapg where nodes represent congressional accounts and an edge from A to B exists if A mentions B, with weight equal to the number of mentions. Edges with fewer than three mentions and isolated nodes were removed to keep the graph interpretable. Key measures include in and out degree, degree assortativity (to test whether highly connected accounts tend to mention one another) and party assortativity (to estimate echo chamber effects). For visualization, interactive explortaion is done with Netwulfs force-directed layout. Combining sentiment, topic labels and network metrics allows questions such as \"which topics show the largest partisan tone gap?\" and \"are the most central accounts also the most negative?\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f09fb0c",
+   "metadata": {},
+   "source": [
+    "# Discussion\n",
+    "\n"
    ]
   },
   {
